third_party/blink/renderer/core/layout/svg/layout_svg_resource_clipper.h
@@ -65,6 +65,7 @@ class LayoutSVGResourceClipper final : public LayoutSVGResourceContainer {
   }
 
  protected:
+  void StyleDidChange(StyleDifference, const ComputedStyle* old_style) override;
   void WillBeDestroyed() override;
 
  private:
